[gd_scene load_steps=27 format=3 uid="uid://byfp3pi6x02gs"]

[ext_resource type="Script" path="res://level_elements/doors_locks/door.gd" id="1_sybd2"]
[ext_resource type="Script" path="res://data/complex_number.gd" id="2_h6u5i"]
[ext_resource type="Script" path="res://data/lock_data.gd" id="3_cjud2"]
[ext_resource type="Script" path="res://data/door_data.gd" id="4_q43he"]
[ext_resource type="Texture2D" uid="uid://cfhmg7cp4bhcs" path="res://level_elements/doors_locks/door_color_light.png" id="5_fj7jm"]
[ext_resource type="Texture2D" uid="uid://bnnlmpfvgiaga" path="res://level_elements/doors_locks/door_color_mid.png" id="6_bs502"]
[ext_resource type="Texture2D" uid="uid://252neirmxm6w" path="res://level_elements/doors_locks/door_color_dark.png" id="7_aov5f"]
[ext_resource type="Texture2D" uid="uid://dk7hvp2syhlt6" path="res://level_elements/doors_locks/stone_texture.png" id="8_jgmu3"]
[ext_resource type="Texture2D" uid="uid://cbdrxilu4i11y" path="res://level_elements/doors_locks/gold_glitch_door.png" id="9_l86wb"]
[ext_resource type="Material" uid="uid://b1go7gviuk2jc" path="res://rendering/glitch.material" id="10_fcdv2"]
[ext_resource type="Texture2D" uid="uid://b1d4n3mlkp7nn" path="res://level_elements/doors_locks/glitch_door.png" id="11_j45k8"]
[ext_resource type="Texture2D" uid="uid://hxpxqwc4s4bx" path="res://level_elements/doors_locks/door_frame_texture_pos.png" id="12_dnssm"]
[ext_resource type="Texture2D" uid="uid://b300fyhgkmlja" path="res://level_elements/doors_locks/door_frame_light.png" id="13_8loq3"]
[ext_resource type="Texture2D" uid="uid://d4lgl6u0642bn" path="res://level_elements/doors_locks/door_frame_mid.png" id="14_g4plk"]
[ext_resource type="Texture2D" uid="uid://cqwfx0awl2b6c" path="res://level_elements/doors_locks/door_frame_dark.png" id="15_1tpkx"]
[ext_resource type="PackedScene" path="res://level_elements/doors_locks/curses/erosion.tscn" id="16_pntfj"]
[ext_resource type="PackedScene" path="res://level_elements/doors_locks/curses/paint.tscn" id="17_oiull"]
[ext_resource type="PackedScene" path="res://level_elements/doors_locks/curses/ice.tscn" id="18_qg5bk"]
[ext_resource type="PackedScene" path="res://level_elements/doors_locks/curses/brown_curse.tscn" id="19_oyr8q"]
[ext_resource type="AudioStream" uid="uid://c43grm5imae8c" path="res://level_elements/doors_locks/open.wav" id="20_k8bk1"]
[ext_resource type="FontFile" uid="uid://d3wvfkvx16abd" path="res://fonts/consolab.ttf" id="21_81h8m"]

[sub_resource type="Resource" id="Resource_lrhk2"]
script = ExtResource("2_h6u5i")
real_part = 1
imaginary_part = 0

[sub_resource type="Resource" id="Resource_ewqbb"]
script = ExtResource("3_cjud2")
color = 12
magnitude = 1
sign = 0
value_type = 0
lock_type = 0
size = Vector2(18, 18)
position = Vector2(7, 7)
lock_arrangement = 0
dont_show_lock = false

[sub_resource type="Resource" id="Resource_rmbwb"]
script = ExtResource("3_cjud2")
color = 13
magnitude = 1
sign = 0
value_type = 0
lock_type = 0
size = Vector2(18, 18)
position = Vector2(39, 7)
lock_arrangement = 0
dont_show_lock = false

[sub_resource type="Resource" id="Resource_m3ecb"]
script = ExtResource("4_q43he")
amount = SubResource("Resource_lrhk2")
outer_color = 1
locks = Array[ExtResource("3_cjud2")]([SubResource("Resource_ewqbb"), SubResource("Resource_rmbwb")])
sequence_next = Array[ExtResource("4_q43he")]([])
size = Vector2i(64, 32)
_curses = {
0: false,
1: false,
2: false,
3: false
}
glitch_color = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j8eyw"]
size = Vector2(1, 1)

[node name="Door" type="MarginContainer"]
custom_minimum_size = Vector2(64, 32)
offset_right = 64.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sybd2")
door_data = SubResource("Resource_m3ecb")

[node name="ColorLight" type="NinePatchRect" parent="."]
unique_name_in_owner = true
modulate = Color(0.929412, 0.917647, 0.905882, 1)
layout_mode = 2
texture = ExtResource("5_fj7jm")
region_rect = Rect2(0, 0, 17, 19)
patch_margin_left = 9
patch_margin_top = 10
patch_margin_right = 9
patch_margin_bottom = 10

[node name="ColorMid" type="NinePatchRect" parent="."]
unique_name_in_owner = true
modulate = Color(0.839216, 0.811765, 0.788235, 1)
layout_mode = 2
texture = ExtResource("6_bs502")
region_rect = Rect2(0, 0, 17, 19)
patch_margin_left = 9
patch_margin_top = 10
patch_margin_right = 9
patch_margin_bottom = 10

[node name="ColorDark" type="NinePatchRect" parent="."]
unique_name_in_owner = true
modulate = Color(0.733333, 0.682353, 0.643137, 1)
layout_mode = 2
texture = ExtResource("7_aov5f")
region_rect = Rect2(0, 0, 17, 19)
patch_margin_left = 9
patch_margin_top = 10
patch_margin_right = 9
patch_margin_bottom = 10

[node name="StoneTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("8_jgmu3")
expand_mode = 1
stretch_mode = 1

[node name="SpecialAnim" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
scale = Vector2(32, 0.551724)
texture = ExtResource("9_l86wb")
centered = false

[node name="Glitch" type="MarginContainer" parent="."]
modulate = Color(0.196078, 0.588235, 0, 1)
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Glitch" type="NinePatchRect" parent="Glitch"]
unique_name_in_owner = true
visible = false
modulate = Color(0.196078, 0.588235, 0, 1)
material = ExtResource("10_fcdv2")
layout_mode = 2
texture = ExtResource("11_j45k8")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Frame" type="NinePatchRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("12_dnssm")
region_rect = Rect2(0, 0, 7, 7)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="FrameLight" type="NinePatchRect" parent="."]
unique_name_in_owner = true
modulate = Color(0.517647, 0.376471, 0.235294, 1)
layout_mode = 2
texture = ExtResource("13_8loq3")
region_rect = Rect2(0, 0, 7, 7)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="FrameMid" type="NinePatchRect" parent="."]
unique_name_in_owner = true
modulate = Color(0.345098, 0.25098, 0.152941, 1)
layout_mode = 2
texture = ExtResource("14_g4plk")
region_rect = Rect2(0, 0, 7, 7)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="FrameDark" type="NinePatchRect" parent="."]
unique_name_in_owner = true
modulate = Color(0.172549, 0.12549, 0.0784314, 1)
layout_mode = 2
texture = ExtResource("15_1tpkx")
region_rect = Rect2(0, 0, 7, 7)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="StaticBody2D" type="StaticBody2D" parent="."]
unique_name_in_owner = true
visible = false
scale = Vector2(64, 32)
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_j8eyw")

[node name="LockHolder" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Erosion" parent="." instance=ExtResource("16_pntfj")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Paint" parent="." instance=ExtResource("17_oiull")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Ice" parent="." instance=ExtResource("18_qg5bk")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="BrownCurse" parent="." instance=ExtResource("19_oyr8q")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Open" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("20_k8bk1")
bus = &"Sfx"

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="Copies" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 2
offset_top = -16.0
offset_right = 64.0
offset_bottom = 12.0
mouse_filter = 1
theme_override_colors/font_color = Color(0.921569, 0.890196, 0.866667, 1)
theme_override_colors/font_outline_color = Color(0.211765, 0.188235, 0.160784, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("21_81h8m")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
